tests/expectations/compiler/core/algorithms/integers/sha3_256/sha3_256_hash_to_u32.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:22
     |
  28 |         let a: u32 = SHA3_256::hash_to_u32(addr_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:22
     |
  29 |         let b: u32 = SHA3_256::hash_to_u32(bool_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:22
     |
  30 |         let c: u32 = SHA3_256::hash_to_u32(field_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:22
     |
  31 |         let d: u32 = SHA3_256::hash_to_u32(group_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:22
     |
  32 |         let e: u32 = SHA3_256::hash_to_u32(i8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:22
     |
  33 |         let f: u32 = SHA3_256::hash_to_u32(i16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:22
     |
  34 |         let g: u32 = SHA3_256::hash_to_u32(i32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:22
     |
  35 |         let h: u32 = SHA3_256::hash_to_u32(i64_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:22
     |
  36 |         let i: u32 = SHA3_256::hash_to_u32(i128_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:22
     |
  37 |         let j: u32 = SHA3_256::hash_to_u32(u8_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:22
     |
  38 |         let k: u32 = SHA3_256::hash_to_u32(u16_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:22
     |
  39 |         let l: u32 = SHA3_256::hash_to_u32(u32_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:22
     |
  40 |         let m: u32 = SHA3_256::hash_to_u32(u64_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:22
     |
  41 |         let n: u32 = SHA3_256::hash_to_u32(u128_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:22
     |
  42 |         let o: u32 = SHA3_256::hash_to_u32(scalar_value);
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:22
     |
  44 |         let q: u32 = SHA3_256::hash_to_u32(Foo { a: 1u128, b: 1u128 });
     |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
